syntax = "proto3";

package protocol;

option java_package = "org.breeswish.droidpuppet";
option java_outer_classname = "ProtocolProtos";

message Encoders {
    repeated string name = 1;
}

message ClientGreeting {
    uint32 widthInPortrait = 1;
    uint32 heightInPortrait = 2;
    uint32 systemSdkVersion = 3;
    string systemReleaseVersion = 4;
    string deviceName = 5;
    map<string, Encoders> videoEncoders = 6;
    string connectionToken = 7;
}

message StreamRequest {
    uint32 videoWidthInPortrait = 1;
    uint32 videoHeightInPortrait = 2;
    string format = 3;
    string encoder = 4;
    uint32 frameRate = 5;
    uint32 kBitRate = 6;
}

message Frame {
    bool restart = 1;   // whether this is a restart frame
    uint32 width = 2;   // only exists for decoded frame
    uint32 height = 3;  // only exists for decoded frame
    uint64 timeUs = 4;  // only exists for video frame
    bytes data = 5;     // exists for decoded frame and video frame
}
